# nextdns-invoices

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml  tests.yaml
deploy/: cronjob.yaml  kustomization.yaml  namespace.yaml  serviceaccount.yaml
invoices/: __init__.py  azure.py  main.py  settings.py  template.html
